[package]
name = "process_dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation", 
    "Win32_System_Threading", 
    "Win32_System_Kernel", 
    "Win32_System_Memory", 
    "Win32_Storage_FileSystem", 
    "Win32_System_Diagnostics_Debug",
    "Win32_Security"
] }
clap = { version = "4.0", features = ["derive"] }
clippy = "0.0.302"
